cursive-bootstrap/tests/ui/E-TYP/E-TYP-1802.cursive
// RUN: compile-fail
// DIAG: E-TYP-1802
// SPEC: 5.2.1
// DESC: Tuple index is not a compile-time constant integer literal

public procedure main(move ctx: Context) -> i32 {
    let t: (i32, i32) = (1, 2)
    var idx: i32 = 0
    let x: i32 = t.idx  //~ ERROR E-TYP-1802: not constant
    return x
}
